# tcloo

./: .cvsignore  ChangeLog  Makefile.in  README.md  README.txt  aclocal.m4  config.h.in  configure  configure.in  license.terms  pkgIndex.tcl  tclooConfig.sh.in
benchmarks/: cps.tcl  methcall.tcl  objinst.tcl
doc/: Class.3  Method.3  OOInitStubs.3  class.n  copy.n  define.n  my.n  next.n  object.n  ooInfo.n  self.n
generic/: pkgoo.c  tclOO.c  tclOO.decls  tclOO.h  tclOOBasic.c  tclOOCall.c  tclOODecls.h  tclOODefineCmds.c  tclOOInfo.c  tclOOInt.h  tclOOIntDecls.h  tclOOMethod.c  tclOOStubInit.c  tclOOStubLib.c
tclconfig/: tcl.m4
tests/: all.tcl  load.test  oo.test  ooNext2.test  oogc.test
tools/: genStubs.tcl
win/: TclOO.rc
