# $Id: configure.in,v 1.34 2008/05/30 23:01:19 dkf Exp $

AC_REVISION($Revision: 1.34 $)
dnl Also *must* update generic/tclOO.h when changing the version number.
dnl Also *must* update tests/oo.test when changing the version number.
dnl Also should update win/TclOO.rc when changing the version number.
AC_INIT([TclOO],[0.4])
AC_CONFIG_AUX_DIR(tclconfig)
AC_CONFIG_HEADERS(config.h)

TEA_INIT([3.6])
TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG
TEA_PREFIX
TEA_SETUP_COMPILER
AC_C_INLINE
TEA_ADD_SOURCES(
	tclOO.c tclOOBasic.c tclOOCall.c tclOODefineCmds.c tclOOInfo.c
	tclOOMethod.c tclOOStubInit.c)
TEA_ADD_STUB_SOURCES(tclOOStubLib.c)
TEA_ADD_HEADERS(generic/tclOO.h generic/tclOODecls.h)
TEAX_ADD_PRIVATE_HEADERS(generic/tclOOInt.h generic/tclOOIntDecls.h)
TEAX_INCLUDE_DIR(.)
TEAX_INCLUDE_DIR(${srcdir}/generic)
TEA_PRIVATE_TCL_HEADERS
TEA_ENABLE_THREADS
TEA_ENABLE_SHARED
TEA_CONFIG_CFLAGS
TEAX_SUBST_RESOURCE(PACKAGE_NAME PKG_LIB_FILE PACKAGE_VERSION)
TEA_ENABLE_SYMBOLS

TEA_MAKE_LIB
TEAX_VC_MANIFEST

TEAX_LAPPEND(CLEANFILES, pkgIndex.tcl)
AC_SUBST(CLEANFILES)
AC_DEFINE(USE_TCL_STUBS,[1],[Should always be 1])
AC_DEFINE(BUILD_tcloo,[1],[Set to 1 when building package])

TEA_PROG_TCLSH
CONFIGURE_OUTPUTS="Makefile tclooConfig.sh config.cache config.log config.status"
AC_SUBST(CONFIGURE_OUTPUTS)

TEAX_SDX

TEAX_CONFIG_INCLUDE_LINE(TCLOO_INCLUDE_SPEC,	     [${includedir}])
TEAX_CONFIG_INCLUDE_LINE(TCLOO_PRIVATE_INCLUDE_SPEC, [${includedir}])
TEAX_CONFIG_LINK_LINE(TCLOO_LIB_SPEC,
	[${libdir}/${PACKAGE_NAME}${PACKAGE_VERSION}], [${PACKAGE_NAME}])
TEAX_CONFIG_LINK_LINE(TCLOO_STUB_LIB_SPEC,
	[${libdir}/${PACKAGE_NAME}${PACKAGE_VERSION}], [${PACKAGE_NAME}stub])

AC_CONFIG_FILES(Makefile tclooConfig.sh)
AC_OUTPUT
